--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -7,8 +7,7 @@
 .dialogsItems {
       padding: 10px;
 }
-.dialogsItems .active {
-      color: rgb(44, 242, 67);
+.dialogsItems .dialog.active {
 }
 
 .dialog {
